examples-generated/namespaced/network/v1beta1/route.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: network.azure.m.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1beta1/route
  labels:
    testing.upbound.io/example-name: example
  name: example
  namespace: upbound-system
spec:
  forProvider:
    addressPrefix: 10.1.0.0/16
    nextHopType: VnetLocal
    resourceGroupNameSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    routeTableNameSelector:
      matchLabels:
        testing.upbound.io/example-name: example
